@@ -1,14 +1,14 @@
 package org.sunflow.image;
 
-public interface Bitmap2 {
-    public static final float INV255 = 1.0f / 255;
-    public static final float INV65535 = 1.0f / 65535;
+public abstract class Bitmap2 {
+    protected static final float INV255 = 1.0f / 255;
+    protected static final float INV65535 = 1.0f / 65535;
 
-    public int getWidth();
+    public abstract int getWidth();
 
-    public int getHeight();
+    public abstract int getHeight();
 
-    public Color readColor(int x, int y);
+    public abstract Color readColor(int x, int y);
 
-    public float readAlpha(int x, int y);
+    public abstract float readAlpha(int x, int y);
 }
